# rust_web_dev

./: Cargo.toml  README.md  build.rs  questions.json  setup.toml
handle-errors/: Cargo.toml
handle-errors/src/: lib.rs
migrations/: 20230728083433_questions_table.down.sql  20230728083433_questions_table.up.sql  20230728084618_answers_table.down.sql  20230728084618_answers_table.up.sql  20230730234918_create_accounts_table.up.sql
src/: config.rs  error.rs  main.rs  profanity.rs  store.rs
src/routes/: answer.rs  authentication.rs  question.rs
src/types/: account.rs  answer.rs  mod.rs  pagination.rs  question.rs
