[package]
name = "rust_web_dev"
version = "0.1.0"
authors = ["Stephen Ezekwem <stephen.ezekwem@ezektec.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.1.1", features = ["full"] }
# We can omit the version number for local imports
handle-errors = { path = "handle-errors" }
# log = "0.4"
# log4rs = "1.0"
tracing = { version ="0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "0.8", features = ["v4"] }
